# nc-inspect

./: .dockerignore  .gitignore  LICENSE  Readme.md  THIRD_PARTY_LICENSES
.github/workflows/: build.yml
data/: test.nc
debian/: copyright
docker/: Dockerfile  build.sh  build_release.sh  config.sh  run.sh
scripts/: create_test_data.py
src/: CMakeLists.txt  ImguiWidgets.cpp  ImguiWidgets.h  NetCDFReader.cpp  NetCDFReader.h  Node.h  PlotData.cpp  PlotData.h  Screen.cpp  Screen.h  VariableData.cpp  VariableData.h  main.cpp
